--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
 <body>
 
     <div class="contenedor">
+<audio controls>
+        <source src="audio.mp3" type="audio/mpeg">
+</audio>
+
         <p>¿Quieres ser mi Novia?</p>
         <button id="yesBtn">Si</button>
         <button id="noBtn">No</button>
     </div>
     <script src="index.js"></script>
+        
 
 </body>
 </html>
